src/main/kotlin/saha/intellij/Yggdrasil.bnf
{
    parserClass = "saha.intellij.language.parser.YggParser"
    parserUtilClass = "com.intellij.lang.parser.GeneratedParserUtilBase"

    psiClassPrefix = "Ygg"
    psiImplClassSuffix = "Node"
    psiPackage = "saha.intellij.language.psi"
    psiImplPackage = "saha.intellij.language.psi_node"

    elementTypeHolderClass = "saha.intellij.language.psi.YggTypes"
    elementTypeClass = "saha.intellij.language.psi.YggElementType"
    tokenTypeClass = "saha.intellij.language.psi.YggElementType"

    extends = "com.intellij.extapi.psi.ASTWrapperPsiElement"
    psiImplUtilClass = "saha.intellij.language.psi_node.YggPsiExtension"

    tokens = [
        AS = "as"

        PARENTHESIS_L = '('
        PARENTHESIS_R = ')'
        BRACKET_L = '['
        BRACKET_R = ']'
        BRACE_L = '{'
        BRACE_R = '}'
        ACCENT = '^'
        ANGLE_L = '<'
        ANGLE_R = '>'
        QUOTATION = '"'
        ESCAPE = '\'
        TAGGED = '<-'
        TO = '->'

        SOFT_CONNECT = '~'
        CHOOSE='|'

        EQ = '='
        COLON = ':'
        SEMICOLON = ';'
        COMMA = ','
        DOLLAR = '$'
        DOT = '.'
        AT = '@'
        HYPHEN = '-'
        NOT='!'
        OPTIONAL='?'
        MANY1 = '+'
        MANY = '*'
    ]
}

Ygg ::= statements*;
// fake used for mixin
// pri used for syntax highlight
fake comment_doc ::= COMMENT_DOC;
private comment ::= COMMENT_LINE | COMMENT_BLOCK | COMMENT_DOC;

private statements ::=
      grammar_statement
    | export_statement
    | import_statement
    | macro_statement
    | macro_call
    | rule_statement
    | SEMICOLON;
// ---------------------------------------------------------------------------------------------------------------------
// @grammar ygg {"*.yg","*.ygg", "*.grammar"}
// @grammar ygg;
grammar_statement ::= "grammar" identifier object {
    pin = identifier
    recoverWhile = end_brace
};
private end_brace ::= BRACE_R;
// ---------------------------------------------------------------------------------------------------------------------
// @import
export_statement ::= "codegen" identifier object {
    pin = identifier
    recoverWhile = end_brace
}
import_statement ::= kw_import string_literal [import_body] {
    pin = string_literal
    recoverWhile = end_brace
}
import_body      ::= BRACE_L [identifier (COMMA identifier)* [COMMA]] BRACE_R;
kw_import        ::= "import" | "use" | "using";
// ---------------------------------------------------------------------------------------------------------------------
// @macro("path")
macro_statement ::= AT SYMBOL <<parenthesis macro_arg COMMA>>;
macro_arg ::= value | macro_statement;
// =====================================================================================================================
// def modifiers rule
rule_statement ::= define modifiers identifier [rule_argument] [rule_type] rule_body {
    pin = identifier
    recoverWhile = end_brace
};
rule_body     ::= BRACE_L [CHOOSE] [expr] BRACE_R;
rule_argument ::= PARENTHESIS_L PARENTHESIS_R;
rule_type     ::= (COLON | ARROW) identifier;
define ::= "def" | "class" | "struct" | "rule" | "enum" | "union" | "function" | "fun";
expr ::= term (infix term | term)*;
term ::= (prefix)* atom (suffix)*
atom ::= '(' [CHOOSE] expr ')' | field_mark | branch_mark | function_call | value;
infix ::= CHOOSE | SOFT_CONNECT;
prefix ::= ACCENT;
suffix ::= OPTIONAL | MANY | MANY1;
// ---------------------------------------------------------------------------------------------------------------------
branch_mark ::= HASH identifier;
field_mark ::= identifier COLON field_rhs;
field_rhs  ::= identifier | charset | string_literal;
// ---------------------------------------------------------------------------------------------------------------------
// @function("path")
function_call ::= AT identifier <<parenthesis expr COMMA>>;
// ---------------------------------------------------------------------------------------------------------------------
macro_call  ::= HASH identifier;
// ---------------------------------------------------------------------------------------------------------------------
value ::= NULL | BOOLEAN | num | string_literal | table | namespace | charset;
type_hint ::= identifier;
number_suffix ::= identifier;
charset ::= REGEX_RANGE;
// ---------------------------------------------------------------------------------------------------------------------
pair ::= symbol_path eq value;
symbol_path ::= key (DOT key)*
key ::= string_literal | key_symbol | INTEGER;
private eq ::= EQ | COLON;
key_symbol ::= SYMBOL;
// ---------------------------------------------------------------------------------------------------------------------
private num ::= [SIGN] (INTEGER | DECIMAL) [number_suffix] | [SIGN] BYTE;
// ---------------------------------------------------------------------------------------------------------------------
string_literal ::= esc | STRING_SQ char* STRING_SQ | STRING_DQ char* STRING_DQ;
private char ::= CHARACTER | esc;
private esc ::= ESCAPE_UNICODE | ESCAPE_SPECIAL;
// ---------------------------------------------------------------------------------------------------------------------
table ::= [type_hint] <<paired table_inner>>;
private table_inner ::= [table_item (COMMA table_item)* [COMMA]];
private table_item ::= pair | value;
// ---------------------------------------------------------------------------------------------------------------------
object ::= BRACE_L (object_item [COMMA|SEMICOLON])* BRACE_R
object_item ::= object_key COLON value;
object_key ::= identifier | string_literal;
// ---------------------------------------------------------------------------------------------------------------------
modifiers ::= (identifier !('('|'{'|ARROW|':'))*;
namespace ::= identifier (DOUBLE_COLON identifier)*
identifier ::= SYMBOL {
    mixin = "saha.intellij.language.mixin.MixinIdentifier"
}
// ---------------------------------------------------------------------------------------------------------------------
meta parenthesis ::= PARENTHESIS_L [<<item>> (<<delimiter>> <<item>>)* [<<delimiter>>]] PARENTHESIS_R;

private meta paired ::=
    PARENTHESIS_L <<param>> PARENTHESIS_R
  | BRACKET_L <<param>> BRACKET_R
  | BRACE_L <<param>> BRACE_R
